Added Second Component

--- a/1 Basics/src/index.html
+++ b/1 Basics/src/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<title>Basics of ReactJS</title>
 	<link rel="shortcut icon" href="https://reactjs.org/favicon.ico">
+	<link rel="stylesheet" href="css/index.css"
 </head>
 <body>
 	<div id="nav"></div>
